# SIN-Browser-Tools

./: .env.template  .gitignore  .pre-commit-config.yaml  AGENTS.md  API.md  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  COOKBOOK.md  DEVELOPMENT.md  LICENSE  OPENSIN_INTEGRATION.md  README.md  pyproject.toml  requirements.txt  test_all_tools.md  test_all_tools.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: test.yml
.opencode/skills/browser-automation/: SKILL.md
.opencode/skills/browser-evidence/: SKILL.md
.opencode/skills/sin-browser-automation/: SKILL.md
.opencode/skills/sin-browser-automation/reference/: error-recovery.md
.opencode/skills/sin-browser-learning/: SKILL.md
.opencode/skills/sin-browser-learning/reference/: screen-record.md
.opencode/skills/sin-browser-skill-authoring/: SKILL.md
docs/: AGENT_GUIDE.md  DIAGNOSTICS.md  ISSUE_OPENCODE_SKILLS.md  ISSUE_WINDOW_SPACES.md  PERMISSIONS_MACOS.md  PLAN_FIX_WAIT_FOR_TEXT_REGRESSION.md  PLAN_OPENCODE_SKILL_AND_LEARNING.md  PLAN_WINDOW_SPACES_AND_FIXES.md  TOOL_DEVELOPMENT.md  WINDOW_AND_SPACES.md
docs/code/: README.md  diagnostics.py.md  evidence.py.md  registration.md
examples/: 01_basic_navigation.py  02_form_interaction.py  03_shadow_dom_frames.py  04_screenshots_pdf.py  05_multi_tab.py  README.md  debug_helper.py
sin_browser_tools/: __init__.py  cli.md  cli.py  core.md  core.py  mcp_server.md  mcp_server.py  opensin_config.md  opensin_config.py  opensin_skill.md  opensin_skill.py  playbook.py
sin_browser_tools/core/: __init__.py  evidence.py  frame_traversal.md  frame_traversal.py  logging_config.py  manager.md  manager.py  observability.md  observability.py  pii_redaction.md  pii_redaction.py  result.py  screen_record.py  session_vault.md  session_vault.py  sessions.py  spa_waker.md  spa_waker.py  spaces.py  window.py
sin_browser_tools/mcp/: __init__.py  server.py
sin_browser_tools/skills/: __init__.py  generator.py
sin_browser_tools/tools/: __init__.md  __init__.py  accessibility.md  accessibility.py  assertions.py  captcha.py  catalog.md  catalog.py  cookies.py  diagnostics.py  dialog.md  dialog.py  downloads.py  extract.py  extraction.md  extraction.py  frames.md  frames.py  identity.py  interaction.md  interaction.py  learning.py  navigation.md  navigation.py  network_control.py  network_intercept.md  network_intercept.py  network_waits.py  screen_record.py  sessions.py  smart_tools.md  smart_tools.py  vision.md  vision.py  window.py
tests/: conftest.py  test_bugfixes_b1_b4.py  test_logging_config.py  test_playbook.py  test_screen_record.py  test_sessions.py  test_skill_generator.py  test_tool_smoke.py  test_v2_enterprise.py
