[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["sin_browser_tools"]

[project]
name = "sin-browser-tools-library"
version = "2.0.0"
description = "Enterprise-grade AI browser automation with OOPIF, Shadow DOM, Session Vault, and PII Redaction."
readme = "README.md"
requires-python = ">=3.10"
authors = [{name = "OpenSIN", email = "dev@opensincodebase.com"}]
license = {text = "MIT"}
keywords = ["browser", "automation", "CDP", "playwright", "MCP", "opensin", "enterprise", "oopif", "shadow-dom"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "playwright>=1.40.0",
    "websockets>=12.0",
    "mcp>=1.2.0",
    "pydantic>=2.0.0",
    "structlog>=23.2.0",
    "httpx>=0.25.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0",
    "ruff>=0.1.0",
    "mypy>=1.7.0",
]

[project.scripts]
# v2.0 entrypoint (neue Architektur)
sin-browser-mcp = "sin_browser_tools.mcp.server:main"
# Legacy entrypoints (rueckwaertskompatibel)
sin-browser-mcp-legacy = "sin_browser_tools.mcp_server:main"
sin-browser = "sin_browser_tools.cli:main"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[project.urls]
Homepage = "https://github.com/OpenSIN-Code/SIN-Browser-Tools"
Repository = "https://github.com/OpenSIN-Code/SIN-Browser-Tools"
